--- a/src/app/components/shared/menu/menu.component.html
+++ b/src/app/components/shared/menu/menu.component.html
@@ -1,3 +1,5 @@
+
+dfdsfd
 <div>
     <button mat-button routerLink="login">
         <i class="fa fa-home" aria-hidden="true"></i> &nbsp;
@@ -24,20 +26,20 @@
 
 <!--  Menu Dictados -->
 <mat-menu  #dictado="matMenu" xPosition="after">
-  <button class="menu" mat-menu-item routerLink="dictado" >
+  <button class="menu" mat-menu-item routerLink="/dictados/dictado" >
      <i class="fa fa-file-audio-o" aria-hidden="true"></i>&nbsp;
     Nuevo</button>
-  <button mat-menu-item class="menu" routerLink="listaDictado">
+  <button mat-menu-item class="menu" routerLink="/dictados/lista-dictado">
     <i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;  
     Dictados Anteriores</button>
 </mat-menu>
 
 <!-- Menu Configuración -->
 <mat-menu #administracion="matMenu" xPosition="after">
-    <button mat-menu-item  class="menu" routerLink="user">
+    <button mat-menu-item  class="menu" routerLink="/admin/usuario">
         <i class="fa fa-user" aria-hidden="true"></i>&nbsp;
         Usuarios</button>
-    <button mat-menu-item  class="menu" routerLink="roles">
+    <button mat-menu-item  class="menu" routerLink="/admin/perfil">
         <i class="fa fa-users" aria-hidden="true"></i>&nbsp;
         Perfiles</button>
 </mat-menu>
