Implementación de RoleGuard y Ajuste de Login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<mat-drawer-container class="example-container" autosize  >
+<mat-drawer-container class="example-container" autosize style="padding: 0px;" >
   <mat-drawer #drawer  class="example-sidenav" mode="side">
-    sadsadsa
     <app-menu *ngIf="validateLogged()"></app-menu>
   </mat-drawer>
   <div class="form-inline" style="padding-top:5px;" >
