--- a/src/app/components/shared/login/login.component.css
+++ b/src/app/components/shared/login/login.component.css
@@ -4,12 +4,43 @@
     /* position: relative; */
     /* top: 200%;
     left: 200%; */
-    
+    position:absolute;
+    top: 30%;
     width: 400px;
-    border: 2px solid brown;
+    background-color: brown;
     padding: 10px;
+    color: white;
     text-align: center;
     border-radius: 5px;
     /* transform: translate(-10%, -10%); */
 }
+
+
+
+::ng-deep body, html {
+    height: 100%;
+    margin: 0;
+    font-size: 40px;
+  }
+
+  ::ng-deep .fondo {
+    position: absolute; top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url('../../../../assets/images/pentagrama.jpg' ) !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+  
+  /* ::ng-deep .bg {
+    background-image: url("../../../../assets/images/pentagrama.jpg") !important;
+  
+
+    height: 100%; 
+  
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  } */
 
