--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -1,8 +1,8 @@
-
+<div class="fondo">
     <div style="display: flex;align-items: center;justify-content: center;">   
         <div class="contenedor-login">
             <div>
-                    <h3>Bienvenido al sistema de Música</h3>
+                    <h2>Bienvenido al sistema de Música</h2>
             </div>
             <div>
                 <mat-form-field>
@@ -32,3 +32,4 @@
         </div>
     </div>
 
+</div>
