--- a/src/app/components/shared/menu/menu.component.html
+++ b/src/app/components/shared/menu/menu.component.html
@@ -1,23 +1,21 @@
-
-dfdsfd
-<div>
-    <button mat-button routerLink="login">
+<div *ngIf="validarRol('Inicio')">
+    <button mat-button routerLink="home">
         <i class="fa fa-home" aria-hidden="true"></i> &nbsp;
         Inicio
     </button>
 </div>
-<div>
+<div *ngIf="validarRol('Dictado')">
     <button mat-button [matMenuTriggerFor]="dictado">
         <i class="fa fa-music" aria-hidden="true"></i>&nbsp;
         Dictados
     </button>
 </div>
-<div>
-    <button mat-button routerLink="profile">
+<div *ngIf="validarRol('Perfil Usuario')">
+    <button mat-button routerLink="/admin/perfil-usuario">
         <i class="fa fa-id-card" aria-hidden="true"></i>
         &nbsp; Perfil Usuario</button>
 </div>
-<div>
+<div *ngIf="validarRol('Admin')">
     <button mat-button [matMenuTriggerFor]="administracion">
         <i class="fa fa-cogs" aria-hidden="true"></i>&nbsp;
         Administración</button>
