Maquetación de Pantallas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="example-container" autosize style="padding: 0px;" >
+<mat-drawer-container class="example-container" autosize style="padding: 0px;background-color: #F7D9B3;" >
   <mat-drawer #drawer  class="example-sidenav" mode="side">
     <app-menu *ngIf="validateLogged()"></app-menu>
   </mat-drawer>
