--- a/src/app/components/shared/home/home.component.html
+++ b/src/app/components/shared/home/home.component.html
@@ -1,1 +1,7 @@
-qeweqweqweqwe
+<div class="container" style="text-align: center;">
+    <h1>
+        Bienvenido al sistema de sadsad
+    </h1>
+        
+    <img src="../../../../assets/images/banner.gif" width="1100" height="200">
+</div>
