--- a/src/app/components/shared/menu/menu.component.html
+++ b/src/app/components/shared/menu/menu.component.html
@@ -11,7 +11,7 @@
     </button>
 </div>
 <div *ngIf="validarRol('Perfil Usuario')">
-    <button mat-button routerLink="/admin/perfil-usuario">
+    <button mat-button routerLink="admin/perfilUsuario">
         <i class="fa fa-id-card" aria-hidden="true"></i>
         &nbsp; Perfil Usuario</button>
 </div>
