--- a/src/app/components/administracion/usuario/usuario-detalle/usuario-detalle.component.css
+++ b/src/app/components/administracion/usuario/usuario-detalle/usuario-detalle.component.css
@@ -1,23 +1,3 @@
-table {
-    width: 100%;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 60%;
-  }
-  
-  td, th {
-    width: 25%;
-  }
-
-  :ng-deep .mat-sort-header-content {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    color: red;
-}
-
 ::ng-deep .mat-select-arrow {
     width: 0;
     height: 0;
@@ -25,7 +5,7 @@ table {
     border-right: 5px solid transparent;
     border-top: 5px solid;
     margin: 0 4px;
-    color:white;
+    color:black;
 }
 
 ::ng-deep .mat-select-value {
@@ -35,11 +15,10 @@ table {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    color:white;
+    color:black;
 }
 
 ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
     height: 1px;
-    background-color: white;
+    background-color: brown;
 }
-
