--- a/src/app/components/dictados/listadictado/listadictado.component.html
+++ b/src/app/components/dictados/listadictado/listadictado.component.html
@@ -1,1 +1,49 @@
-<p>listadictado works!</p>
+<div class="container" style="background-color: #F7D9B3;">
+    <h1>Historico de Dictados</h1>
+    <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Digite un criterio de busqueda" #input>
+      </mat-form-field>
+      
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+      
+          <ng-container matColumnDef="tipo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nivel </th>
+            <td mat-cell *matCellDef="let row"> {{row.tipo}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="fecha">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+            <td mat-cell *matCellDef="let row"> {{row.fecha | date: 'yyyy/MM/dd hh:mm:ss'}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="calificacion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Calificación </th>
+            <td mat-cell *matCellDef="let row"> 
+                <mat-icon *ngIf="row.calificacion" matTooltip="Aprobado"  style="color:green;cursor:default">thumb_up</mat-icon>
+                <mat-icon *ngIf="!row.calificacion" matTooltip="Fallido" style="color:red;cursor:default">thumb_down</mat-icon>
+            </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="detalle">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <td mat-cell *matCellDef="let row">
+
+                <mat-icon style="cursor: pointer;color:brown" matTooltip="Ver Detalle" aria-hidden="false" aria-label="Example home icon" (click)="verDetalle(row)">remove_red_eye</mat-icon>
+            </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No hay información</td>
+          </tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
+</div>
+
