--- a/src/app/components/administracion/usuario/usuario/usuario.component.html
+++ b/src/app/components/administracion/usuario/usuario/usuario.component.html
@@ -19,18 +19,13 @@
         <table mat-table [dataSource]="dataSource" matSort>
       
           <ng-container matColumnDef="idUsuario">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id Usuario </th>
             <td mat-cell *matCellDef="let row"> {{row.idUsuario}} </td>
           </ng-container>
       
           <ng-container matColumnDef="nombre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
             <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="username">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
-            <td mat-cell *matCellDef="let row"> {{row.username}} </td>
           </ng-container>
 
           <ng-container matColumnDef="nombrePerfil">
@@ -48,7 +43,7 @@
             <td mat-cell *matCellDef="let row">
 
                 <mat-icon style="cursor: pointer;color:brown" matTooltip="Editar" aria-hidden="false" aria-label="Example home icon" (click)="edit(row)">create</mat-icon>
-                <mat-icon style="cursor: pointer;color:brown" matTooltip="Activar/Desactivar" aria-hidden="false" aria-label="Example home icon">block</mat-icon>
+                <mat-icon style="cursor: pointer;color:brown" matTooltip="Activar/Desactivar" aria-hidden="false" aria-label="Example home icon" (click)="cambiarEstado(row)">block</mat-icon>
             </td>
           </ng-container>
       
