--- a/src/app/components/dictados/dictado/dictado.component.html
+++ b/src/app/components/dictados/dictado/dictado.component.html
@@ -24,7 +24,7 @@
     
     <hr />
     <h2>Dictado</h2>
-    <div id="paper" class="paper"></div>
+    <div id="paper" class="paper" hidden></div>
     <div id="audio" [hidden]="!showAudio"></div>
     <br>
     <div class="row" *ngIf="validarCantidadCompas()">
@@ -40,7 +40,7 @@
     <h2>Respuesta</h2>
     <div id="paperRespuesta" class="paper" ></div>
     <div id="audioRespuesta"></div>
-    {{conteoCompas}} &nbsp; {{longitudCompas}}
+    <!-- {{conteoCompas}} &nbsp; {{longitudCompas}} -->
     <br>
     <div class="row" style="text-align: right;align-items: flex-start;" *ngIf="showBotonesAcciones">
         <!-- <input type="button" style="margin: 5px;" class="boton" value="Borrar Última Nota" (click)="borrarUltima()">
