--- a/src/app/components/shared/login/login.component.css
+++ b/src/app/components/shared/login/login.component.css
@@ -4,7 +4,7 @@
     /* position: relative; */
     /* top: 200%;
     left: 200%; */
-    position:absolute;
+    /* position:absolute; */
     top: 30%;
     width: 400px;
     background-color: brown;
@@ -12,6 +12,7 @@
     color: white;
     text-align: center;
     border-radius: 5px;
+    margin-top: 100px;
     /* transform: translate(-10%, -10%); */
 }
 
